--- a/index.html
+++ b/index.html
@@ -9443,14 +9443,14 @@ En arrivant là-haut, on se réjouit d’abord de cette belle ascension, puis on
                                                                                     Axel rigole… mais je sens que quelque chose est possible.<br>
 Pour moi, tous les voyants sont au vert. Je suis lucide, je me sens confiante, et les conditions sont exceptionnelles. En plus, mon sac light est un vrai avantage.<br>
 On réfléchit pendant au moins vingt minutes à chaque détail, chaque scénario.<br>
-                                                                                    Je choisis de me vacher sur trois Friends, placés en triangle autour de moi, pour éviter de me faire arracher. Je garde un petit débattement pour pouvoir me recentrer. Je prépare ma voile minutieusement, en boule, pour un "Throw & Go".<br>
+                                                                                    Je choisis de me vacher sur trois Friends, placés en triangle autour de moi, pour éviter de me faire arracher. Je garde un petit débattement pour pouvoir me recentrer et prépare ma voile minutieusement, en boule, pour un "Throw & Go".<br>
 Le premier essai rate, la voile monte de travers, je l’affale immédiatement. Deuxième tentative, je relance proprement, et elle gonfle au-dessus de ma tête comme une fleur. C’est fou, le matériel d’aujourd’hui permet de gonfler la voile sur place, sans bouger, dans ce genre de conditions.
-Je temporise, j’ajuste les commandes, et je vérifie tout par peur d’avoir coupé une suspente sur le granite.  Et me voilà : vachée au sommet des Drus, avec ma voile au dessus de la tête. C’est irréel.<br>
-Les conditions sont parfaites. La voile tient toute seule, sans le moindre contrôle. Je respire, j’enlève ma longe, je prends une grande inspiration, et je fais deux pas.<br>
+Je temporise, j’ajuste les commandes, et je vérifie tout, par peur d’avoir coupé une suspente sur le granite.  Et me voilà vachée au sommet des Drus, avec ma voile au dessus de la tête. C’est irréel.<br>
+Les conditions sont parfaites. La voile tient toute seule, sans le moindre contrôle. J’enlève ma longe, je prends une grande inspiration, et je fais deux pas.<br>
                                                                                     C’est fait. J’ai déjà 1000 m de vide sous les pieds. C’était à la fois très intense en adrénaline et à la fois calme et maîtrisé.<br>
 Axel récupère les Friends et saute à son tour. Il me dépasse en wingsuit avec une vitesse impressionnante.<br>
 Pour ma part, je survole tout en douceur la face que nous venons de gravir. C’était fort. Très fort.<br>
-L’émotion est immense. Parce qu’au-delà du geste, ce n’était pas une performance, ni un record. C’était un rêve d’équilibre entre respect de la montagne et opportunité rare de conditions parfaites.<br>
+L’émotion est immense. Parce qu’au-delà du geste, ce n’est pas une performance, ni un record, c’est un rêve d’équilibre entre respect de la montagne et opportunité rare de conditions parfaites.<br>
                                          <p>
 <strong>Pour moi, là-haut, on n’impose rien. On propose. Et parfois, elle te fait un cadeau. Ce vol, c’était ça : un cadeau. Pas une performance. Une offrande.</strong>
                                                                                     <span style="font-weight: 400"></span>
